# cascadeguard

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HOOKS.md  LICENSE  README.md  SDLC.md  SECURITY.md  Taskfile.docker.yaml  Taskfile.shared.yaml  Taskfile.yaml  install.ps1  install.sh  kargo-integration.test.ts  package-lock.json  package.json
.ai/agents/product-owner/: AGENTS.md
.cascadeguard/: actions-policy.schema.json  actions-policy.yaml
.github/workflows/: docker-build.yml  enforce-actions-policy.yaml  pypi-publish.yaml  synth.yml  test.yml
app/: README.md  actions_policy.py  app.py  cascadeguard.py  generate_ci.py  generate_state.py  pyproject.toml  storage.py  tools_check.py  tools_enroll.py
app/scan/: __init__.py  discoverers.py  engine.py  models.py  report.py
app/tests/: test_actions_policy.py  test_app.py  test_cascadeguard.py  test_check_exit_codes.py  test_check_flags.py  test_check_job_summary.py  test_check_promotion.py  test_discoverers.py  test_generate_ci.py  test_hooks.py  test_promotion_pr_api.py  test_quarantine.py  test_report_analysis.py  test_scan.py  test_scan_issues_api.py  test_tools_check.py  test_tools_enroll.py
cdk8s/: README.md  images.yaml  main.py  pyproject.toml  test_main.py
cdk8s/lib/: __init__.py  analysis.py  infrastructure.py  warehouses.py
docs/plans/: github-issues-integration.md  growth-strategy-v3.md
hooks/: pre-commit
saas/: alembic.ini  pyproject.toml  storage.py
saas/alembic/: env.py
saas/alembic/versions/: 001_initial_schema.py
saas/api/: main.py
saas/api/middleware/: error_handler.py  tenant_context.py
saas/api/routers/: health.py
saas/db/: base.py  models.py  session.py
tests/acceptance/: pyproject.toml  test_acceptance.py
tests/acceptance/fixtures/actions-pin/.github/workflows/: ci.yml  release.yml
tests/acceptance/fixtures/generate-ci/: images.yaml
tests/acceptance/fixtures/github-actions/: .cascadeguard.yaml  cascadeguard.yaml  images.yaml
tests/integration/: pyproject.toml  test_integration.py
